# SLKB-Analysis-Pipeline

./: .gitignore  .zenodo.json  404.html  API.html  Contact & Reference.html  Database_Design(Done).ipynb  GEMINI.R  MANIFEST.in  README.md  SLKB_Merge(Done).ipynb  SLKB_Pipeline_Analysis(Done).ipynb  SLKB_Query.ipynb  index.html  installation.html  mkdocs.yml  pipeline.html  pyproject.toml  requirements.txt  search.html  setup.py  sitemap.xml  website.html
Notebooks/: Database_Design(Done).ipynb  SLKB_Merge(Done).ipynb  SLKB_Pipeline_Analysis(Done).ipynb  SLKB_Query.ipynb
SLKB/: __init__.py  functions.py
SLKB/files/: GEMINI.R  SLKB_mysql_schema.sql  SLKB_sqlite3_schema.sql  all_scores.csv  demo_data.pickle  mageck_control.txt  pipeline.ipynb
SLKB/files/GEMINI_Files/36060092/22RV1/: GEMINI_Scores.csv  GEMINI_commands.sh  counts.csv  guide_gene_annotation.csv  sequences.csv
SLKB/files/HORLBECK_Files/36060092/22RV1/: GI_Score_1.gzip  GI_Score_2.gzip
docs/: API.md  Contact & Reference.md  index.md  installation.md  pipeline.md  website.md
search/: search_index.json
