[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SLKB"
version = "1.0.11"
authors = [
  { name="Birkan Gokbag", email="birkan.gokbag@gmail.com" },
]
description = "Analysis pipeline for Synthetic Lethality Knowledge Base"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/BirkanGokbag/SLKB-Analysis-Pipeline"